BUG: specify also a directory for --resultVolumeFileName, otherwise it would try to overwrite the directory which is specified in the mrml scene
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15816 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -464,14 +464,16 @@ if(NOT DISABLE_CXX_TESTING)
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --targetVolumeFileNames
     ${EMSegment_TUTORIAL_DIR}/VolumeData/targetT1Normed_small.mhd,${EMSegment_TUTORIAL_DIR}/VolumeData/targetT2Normed_small.mhd
+    --resultVolumeFileName
+    ${Slicer3_BINARY_DIR}/Testing/Temporary/EMSegCL_IntermediateResults_FinalResult.nrrd
     --intermediateResultsDirectory
-    "${Slicer3_BINARY_DIR}/Testing/Temporary"
+    ${Slicer3_BINARY_DIR}/Testing/Temporary
     )
   set_tests_properties(
     EMSegCL_IntermediateResults
     PROPERTIES
     FAIL_REGULAR_EXPRESSION
-    "ERROR;Error writing intermediate results"
+    "Error writing intermediate results"
     )
 
   # Task test - small
