ENH: porting the pad argument from Slicer4, plus test
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15909 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -811,6 +811,14 @@ add_test(ModelMakerGenerateAllThreeLabelsTest ${Launcher_Command} ${TestLocation
     --modelSceneFile ${TEMP}/ModelMakerTest.mrml\#vtkMRMLModelHierarchyNode1
     ${MRML_TEST_DATA}/helixMask3Labels.nrrd
   )
+add_test(ModelMakerGenerateAllThreeLabelsPadTest ${Launcher_Command} ${TestLocation}ModelMakerTest
+  ModelMakerTest
+    --generateAll
+    --modelSceneFile ${TEMP}/ModelMakerTest.mrml\#vtkMRMLModelHierarchyNode1
+    --pad
+    ${MRML_TEST_DATA}/helixMask3Labels.nrrd
+  )
+
 add_test(ModelMakerStartEndTest ${Launcher_Command} ${TestLocation}ModelMakerTest
   ModelMakerTest
     --start 1 --end 5
