BUG: TclInterpreter was not compiled and had the wrong CLP file - caused issues under certain windows builts
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15950 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
+++ b/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
@@ -60,13 +60,6 @@ set(CLP_MODULE EMSegmentTclInterpreter)
 set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
 generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
 
-set(CLP_MODULE EMSegmentTransformToNewFormat)
-set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
-generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
-
-# --------------------------------------------------------------------------
-# Build and install the exe
-
 add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
 slicer3_set_plugins_output_path(${CLP_MODULE})
 target_link_libraries(
@@ -74,4 +67,20 @@ target_link_libraries(
   EMSegment
   vtkCommon
   )
+
+set(CLP_MODULE EMSegmentTransformToNewFormat)
+set(${CLP_MODULE}_SOURCE ${CLP_MODULE}.cxx )
+generateclp( ${CLP_MODULE}_SOURCE  ${CLP_MODULE}.xml)
+add_executable(${CLP_MODULE} ${${CLP_MODULE}_SOURCE})
+slicer3_set_plugins_output_path(${CLP_MODULE})
+target_link_libraries(
+  ${CLP_MODULE}
+  EMSegment
+  vtkCommon
+  )
+
+# --------------------------------------------------------------------------
+# Build and install the exe
+
+
 
