BUG: fixed bug in test EMSegCL_IntermediateResults: 'UpdateScene: error getting 0th storage node'
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15951 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -500,7 +500,7 @@ if(NOT DISABLE_CXX_TESTING)
     EMSegCL_IntermediateResults
     PROPERTIES
     FAIL_REGULAR_EXPRESSION
-    "Error writing intermediate results"
+    "ERROR;Error writing intermediate results"
     )
 
 
