COMP: merge from 3.6 branch (fix for image compare in polydata label map test)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16068 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -1180,6 +1180,7 @@ target_link_libraries(${CLP}Test ${CLP}Lib)
 add_test(PolyDataToLabelmapTest ${Launcher_Command} ${TestLocation}PolyDataToLabelmapTest
   --compare ${BASELINE}/OAS10001.mha
             ${TEMP}/PolyDataToLabelmapTestOutput.mha
+  --compareNumberOfPixelsTolerance 18
   ModuleEntryPoint
     ${TEST_DATA}/PolyDataToLabelmap/OAS10001.hdr 
     ${TEST_DATA}/PolyDataToLabelmap/OAS10001.vtp 
