BUG: merge from slicer36 branch - allow a few pixel mismatches in test to account for rounding differences
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16070 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DiffusionApplications/ResampleDTI/Testing/CMakeLists.txt
+++ b/Applications/CLI/DiffusionApplications/ResampleDTI/Testing/CMakeLists.txt
@@ -74,6 +74,7 @@ add_test(${CLP}BSplineWSInterpolationTest ${Launcher_Command} ${TestLocation}${R
     ${ReferenceImageBSplineWS}
     ${TransformedImage3}
   --compareIntensityTolerance 0
+  --compareNumberOfPixelsTolerance 3
   ModuleEntryPoint
     -f ${BSplineFile}
     --interpolation ws
